<resources>
    <string name="app_name">Mareu</string>
    <string name="create">Créer</string>
    <string name="cancel">Annuler</string>
    <string name="subject">Sujet</string>
    <string name="item_meeting_subject_format">%1$s - %2$s - Salle %3$s</string>
    <string name="delete_meeting_toast">Réunion supprimée</string>
    <string name="add_meeting_toast_create">Réunion créé</string>
    <string name="add_meeting_toast_cancel">Création de réunion annulée</string>
    <string name="cancel_delete_meeting_toast">Réunion conservée</string>
    <string name="delete_meeting_confirmation_title">Voulez-vous vraiment supprimer cette réunion?</string>
    <string name="ok">OK</string>
    <string name="delete_meeting_cancel">Annuler</string>
    <string name="meeting_add_change_date">Changer la date</string>
    <string name="actionbar_title_meeting_list">Liste des réunions</string>
    <string name="actionbar_title_meeting_add">Ajouter une réunion</string>
    <string name="filter">Filtrer</string>
    <string-array name="meeting_room_names_array">
        <item>Salle 1</item>
        <item>Salle 2</item>
        <item>Salle 3</item>
        <item>Salle 4</item>
        <item>Salle 5</item>
        <item>Salle 6</item>
        <item>Salle 7</item>
        <item>Salle 8</item>
        <item>Salle 9</item>
        <item>Salle 10</item>
    </string-array>
    <string name="reset">Réinitialiser</string>
    <string name="format_date">%1$02d/%2$02d/%3$04d</string>
    <string name="format_hour">%1$02dh%2$02d</string>
    <string name="format_room">%1$d</string>
    <string name="validate">Valider</string>
    <string name="display_format_hour">%1$02d h %2$02d</string>
    <string name="display_date_format">EEEE d MMMM yyyy</string>
    <string name="subject_cant_be_empty">Merci de remplir le champ Sujet</string>
    <string name="choose_filter">Choisir un filtre</string>
    <string name="description_button_to_delete_meeting">Bouton pour supprimer la reunion</string>
</resources>