...
    android:layout_height="match_parent"
    android:paddingHorizontal="50dp"
    android:paddingVertical="50dp"
    tools:context=".MeetingAddActivity">

    <EditText
        android:id="@+id/meetingSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
...
